--- a/test.html
+++ b/test.html
@@ -18,7 +18,7 @@
         })
         .then(blob => {
             console.log(blob);
-            document.getElementById('rainbow').src = URLcreateObject(blob);
+            document.getElementById('rainbow').src = URLcreateObjectURL(blob);
         });
 </script>
 </body>
