--- a/test2.html
+++ b/test2.html
@@ -7,19 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-<p>Can you see me?</p>
-<img src="" id="rainbow" />
+<img src="" id="rainbow" width="480" />
 <script>
     console.log('about to fetch a rainbow');
-    fetch('rainbow.jpg')
-        .then(response => {
-            console.log(response);
-            return response.blob();
-        })
-        .then(blob => {
-            console.log(blob);
-            document.getElementById('rainbow').src = URLcreateObjectURL(blob);
-        });
+    
+    catchRainbow();
+
+    async function catchRainbow() {
+        const response = await fetch('rainbow.jpg');
+        const blob = await response.blob();
+        document.getElementById('rainbow').src = URLcreateObjectURL(blob);
+    }
+        // .catch(error => {
+        //     console.error(error);
+        // });
 </script>
 </body>
 </html>
