--- a/test2.html
+++ b/test2.html
@@ -16,7 +16,7 @@
     async function catchRainbow() {
         const response = await fetch('rainbow.jpg');
         const blob = await response.blob();
-        document.getElementById('rainbow').src = URLcreateObjectURL(blob);
+        document.getElementById('rainbow').src = URL.createObjectURL(blob);
     }
         // .catch(error => {
         //     console.error(error);
