--- a/test2.html
+++ b/test2.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <p>Ben y a du boulot</p>
 <img src="" id="rainbow" width="480" />
 <script>
     console.log('about to fetch a rainbow');
