--- a/test2.html
+++ b/test2.html
@@ -13,15 +13,18 @@
     console.log('about to fetch a rainbow');
     
     catchRainbow();
-
+    .then(response => {
+        console.log('yay');
+    })
+    .catch(error => {
+            console.log('error!');
+            console.error(error);
+        });
     async function catchRainbow() {
         const response = await fetch('rainbow.jpg');
         const blob = await response.blob();
-        document.getElementById('rainbow').src = URL.createObjectURL(blob);
+        document.getElementById('rainbow').src = URLcreateObjectURL(blob);
     }
-        // .catch(error => {
-        //     console.error(error);
-        // });
 </script>
 </body>
 </html>
