--- a/catchingarainbow.html
+++ b/catchingarainbow.html
@@ -12,7 +12,7 @@
 <script>
     console.log('about to fetch a rainbow');
     
-    catchRainbow();
+    catchRainbow()
     .then(response => {
         console.log('yay');
     })
