--- a/catchingarainbow.html
+++ b/catchingarainbow.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Ben y a pas mal de boulot</p>
+    <p>Ben y a toujours pas mal de boulot</p>
 <img src="" id="rainbow" width="480" />
 <script>
     console.log('about to fetch a rainbow');
