--- a/rainbowandpoem.html
+++ b/rainbowandpoem.html
@@ -25,6 +25,22 @@
         const blob = await response.blob();
         document.getElementById('rainbow').src = URL.createObjectURL(blob);
     }
+    
+    console.log('about to fetch a poem');
+    
+    catchPoem()
+    .then(response => {
+        console.log('yay');
+    })
+    .catch(error => {
+            console.log('error!');
+            console.error(error);
+        });
+    async function catchPoem() {
+        const reponse = await fetch('poem.txt');
+        const blub = await reponse.blub();
+        document.getElementBYId('poem').innerText = URL.createObjectURL(blub);
+    }
 </script>
 </body>
 </html>
