--- a/rainbowandpoem.html
+++ b/rainbowandpoem.html
@@ -38,7 +38,7 @@
         });
     async function catchPoem() {
         const response = await fetch('poem.txt');
-        const blob = await reponse.blob();
+        const blob = await response.blob();
         document.getElementBYId('poem').innerText = URL.createObjectURL(blob);
     }
 </script>
