--- a/rainbowandpoem.html
+++ b/rainbowandpoem.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Puis un poème</p>
+    <p>Attrape un arc-en-ciel et un poème</p>
 <img src="" id="rainbow" width="480" />
 <script>
     console.log('about to fetch a rainbow');
