--- a/rainbowandpoem.html
+++ b/rainbowandpoem.html
@@ -7,8 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Attrape un arc-en-ciel et un poème 5</p>
-<img src="" id="rainbow" width="480" />
+    <p>Attrape un arc-en-ciel et un poème 6</p>
+    <img src="" id="rainbow" width="480" />
+    <p id="poem"/>
 <script>
     console.log('about to fetch a rainbow');
     
