--- a/rainbowandpoem.html
+++ b/rainbowandpoem.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Attrape un arc-en-ciel et un poème 6</p>
+    <p>Attrape un arc-en-ciel et un poème</p>
     <img src="" id="rainbow" width="480" />
     <p id="poem"/>
 <script>
