--- a/Beatles.html
+++ b/Beatles.html
@@ -7,14 +7,14 @@
     <title>Coding Train: Data/APIs 1</title>
   </head>
   <body>
-    <h1>Fetch Beatles</h1>
+    <h1>Fetch Beatles now</h1>
 
     <script>
       console.log('about to fetch some Beatles');
       const filenames = [
         'John.png',
-        'Paul.png'
-        'George.png'
+        'Paul.png',
+        'George.png',
         'Ringo.png'
       ];
       catchBeatles(filenames)
