--- a/Beatles.html
+++ b/Beatles.html
@@ -7,7 +7,7 @@
     <title>Coding Train: Data/APIs 1</title>
   </head>
   <body>
-    <h1>Fetch Beatles now</h1>
+    <h1>Fetch Beatles 2</h1>
     <div id="beatlezone"></div>
 
     <script>
