--- a/Beatles.html
+++ b/Beatles.html
@@ -7,7 +7,7 @@
     <title>Coding Train: Data/APIs 1</title>
   </head>
   <body>
-    <h1>Fetch Beatles 2</h1>
+    <h1>Fetch Beatles 3</h1>
     <div id="beatlezone"></div>
 
     <script>
@@ -33,7 +33,7 @@
           const img = document.createElement('img');
           img.src = URL.createObjectURL(blob);
           img.width = '250';
-          document.beatlezone.append(img);
+          document.div.append(img);
         }
       }
     </script>
