--- a/maps/mediamap.html
+++ b/maps/mediamap.html
@@ -11,8 +11,15 @@
    integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
    crossorigin=""></script>
     <style>
-    #myMediaMap { height: 100%; }
-
+    body {
+        padding: 0;
+        margin: 0;
+    }
+    html, body, #myMediaMap {
+    height: 100%;
+    width: 100vw;
+    }
+    
     </style>
 
 
