--- a/maps/mediamap.html
+++ b/maps/mediamap.html
@@ -74,8 +74,8 @@
     });
     
     async function getData() {
-        // const response = await fetch('medias.csv');
-        const response = await fetch('https://docs.google.com/spreadsheets/d/e/2PACX-1vTTBnfLv5WM_aPcW6U9zyprtdAfvrBrb0RKrW4-23oXIAaIlsuXAJzg54-nhLr4LW3FvZI_kZL4Tte_/pub?gid=0&single=true&output=csv');
+        const response = await fetch('medias.csv');
+        // const response = await fetch('https://docs.google.com/spreadsheets/d/e/2PACX-1vTTBnfLv5WM_aPcW6U9zyprtdAfvrBrb0RKrW4-23oXIAaIlsuXAJzg54-nhLr4LW3FvZI_kZL4Tte_/pub?gid=0&single=true&output=csv');
         const data = await response.text();
         const { Latitude, Longitude } = data;
         const table = data.split('\n').slice(1);
