Change image size

--- a/FOV2020/Programme2407.html
+++ b/FOV2020/Programme2407.html
@@ -7,6 +7,6 @@
   <script src="script.js"></script>
 </head>
 <body>
- <img src="FCFOV2020.png">
+ <img src="FCFOV2020.png" width="600 px">
 </body>
 </html>
