--- a/FOV2020/Programme2407.html
+++ b/FOV2020/Programme2407.html
@@ -5,9 +5,14 @@
   <title>Programme</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
+  <style>
+    a { text-decoration:none;
+        color: #00008B;
+    }
+  </style>
 </head>
 <body>
- <img src="FCFOV2020.png" width="600 px">
+ <img src="FCFOV2020.png" width="200 px">
   <ul>
     <li><strong><a href="https://www.youtube.com/watch?v=uf0nKp2P8pM" target="_blank">Le Casting</a></strong> - 3 minutes</li>
     <li><strong><a href="https://vimeo.com/1236313" target="_blank">Squash</a></strong> - 27 minutes</li>
