--- a/FOV2020/Programme2407.html
+++ b/FOV2020/Programme2407.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
   <style>
+    html {
+      font-family: Verdana;
+    }
     a { text-decoration:none;
         color: #00008B;
     }
