--- a/FOV2020/Programme2407.html
+++ b/FOV2020/Programme2407.html
@@ -9,6 +9,9 @@
     html {
       font-family: Verdana;
     }
+    ul > li {
+      line-height: 2;
+    }
     a { text-decoration:none;
         color: #00008B;
     }
