--- a/FOV2020/Programme2407.html
+++ b/FOV2020/Programme2407.html
@@ -10,6 +10,7 @@
       font-family: Verdana;
     }
     ul > li {
+      margin: .5em 0;
       line-height: 2;
     }
     a { text-decoration:none;
