--- a/FOV2020/Programme2407b.html
+++ b/FOV2020/Programme2407b.html
@@ -23,7 +23,9 @@
   <ul>
     <li><strong><a href="https://www.youtube.com/watch?v=KUTtKnI90H0" target="_blank">Le Bureau des rêves</a></strong> - 4 minutes</li>
     <li><strong><a href="https://www.youtube.com/watch?v=1ex9cd-dI6Y" target="_blank">Intolerance Part I</a></strong> - 11 minutes</li>
- 
+    <li><strong><a href="https://www.youtube.com/watch?v=F-kLwqxjQt0" target="_blank">Fantôme de merde</a></strong> - 24 minutes</li>
+    <li><strong><a href="https://www.arte.tv/fr/videos/089936-000-A/normal/" target="_blank">Normal</a></strong> - 11 minutes</li>
+    
   </ul>
 
 </body>
