--- a/FOV2020/Programme2407.html
+++ b/FOV2020/Programme2407.html
@@ -25,10 +25,11 @@
     <li><strong><a href="https://vimeo.com/1236313" target="_blank">Squash</a></strong> - 27 minutes</li>
     <li><strong><a href="https://www.arte.tv/fr/videos/095151-000-A/no-i-don-t-want-to-dance/" target="_blank">No, I Don't Want to Dance</a></strong> - 3 minutes</li>
     <li><strong>Le court-métrage ethnographique de Lise</strong> - XXX minutes</li>
-    <li><strong>Court de Juju</strong> - XXX minutes</li>
+    <li><strong><a href="https://www.youtube.com/watch?v=iSkbd6hRkXo" target="_blank">Numb</a></strong> - 3 minutes</li>
     <li><strong><a href="https://www.youtube.com/watch?v=P5_Msrdg3Hk" target="_blank">The Black Hole</a></strong> - 3 minutes</li>
     <li><strong><a href="https://www.youtube.com/watch?v=xPgx6p5lPno" target="_blank">La Révolution des crabes</a></strong> - 5 minutes</li>
     <li><strong><a href="https://www.youtube.com/watch?v=KI2lsdXJQ40" target="_blank">Negative Space</a></strong> - 5 minutes</li>
+    <li><strong><a href="https://vimeo.com/242573626" target="_blank">H.B.</a></strong> - 3 minutes</li>
     <li><strong>Kung Fury</strong> - 31 minutes</li>
     
   </ul>
