--- a/FOV2020/Programme2407.html
+++ b/FOV2020/Programme2407.html
@@ -30,7 +30,7 @@
     <li><strong><a href="https://www.youtube.com/watch?v=P5_Msrdg3Hk" target="_blank">The Black Hole</a></strong> - 3 minutes</li>
     <li><strong><a href="https://www.youtube.com/watch?v=xPgx6p5lPno" target="_blank">La Révolution des crabes</a></strong> - 5 minutes</li>
     <li><strong><a href="https://www.youtube.com/watch?v=KI2lsdXJQ40" target="_blank">Negative Space</a></strong> - 5 minutes</li>
-    <li><strong><a href="https://vimeo.com/242573626" target="_blank">H.B.</a></strong> - 3 minutes</li>
+    <li><strong><a href="https://vimeo.com/242573626" target="_blank">H.B.</a></strong> - 1 minute</li>
     <li><strong>Kung Fury</strong> - 31 minutes</li>
     
   </ul>
