--- a/FOV2020/Programme2407.html
+++ b/FOV2020/Programme2407.html
@@ -31,6 +31,7 @@
     <li><strong><a href="https://www.youtube.com/watch?v=KI2lsdXJQ40" target="_blank">Negative Space</a></strong> - 5 minutes</li>
     <li><strong><a href="https://vimeo.com/242573626" target="_blank">H.B.</a></strong> - 1 minute</li>
     <li><strong>Kung Fury</strong> - 31 minutes</li>
+    <li><strong><a href="https://www.arte.tv/fr/videos/071396-001-A/flash-info/" target="_blank">Flash Info</a></strong> - 2 minutes</li>
     
   </ul>
   
