--- a/FOV2020/Programme2407.html
+++ b/FOV2020/Programme2407.html
@@ -22,7 +22,7 @@
   <p>Programme du 24 juillet 2020</p>
   <ul>
     <li><strong><a href="https://www.youtube.com/watch?v=uf0nKp2P8pM" target="_blank">Le Casting</a></strong> - 3 minutes</li>
-    <li><strong><a href="https://vimeo.com/1236313" target="_blank">Squash</a></strong> - 27 minutes</li>
+    <li><strong><a href="https://vimeo.com/1236313" target="_blank">Boulot et squash</a></strong> - 27 minutes</li>
     <li><strong><a href="https://www.arte.tv/fr/videos/095151-000-A/no-i-don-t-want-to-dance/" target="_blank">No, I Don't Want to Dance</a></strong> - 3 minutes</li>
     <li><strong>Le court-métrage ethnographique de Lise</strong> - XXX minutes</li>
     <li><strong><a href="https://www.youtube.com/watch?v=iSkbd6hRkXo" target="_blank">Numb</a></strong> - 3 minutes</li>
