--- a/FOV2020/Programme2407.html
+++ b/FOV2020/Programme2407.html
@@ -19,7 +19,7 @@
   </style>
 </head>
 <body>
- <img src="FCFOV2020.png" width="300 px">
+ <img src="FCFOV2020.png" width="300 px" align=left>
   <p>Programme du 24 juillet 2020</p>
   <ul>
     <li><strong><a href="https://www.youtube.com/watch?v=uf0nKp2P8pM" target="_blank">Le Casting</a></strong> - 3 minutes</li>
