--- a/FOV2020/Programme2407.html
+++ b/FOV2020/Programme2407.html
@@ -27,7 +27,7 @@
 <body>
   <div class="flotte"><img src="FCFOV2020.png" width="500 px"></div>
   <div>Programme du 24 juillet 2020</div>
-  <ul>
+  <div><ul>
     <li><strong><a href="https://www.youtube.com/watch?v=uf0nKp2P8pM" target="_blank">Le Casting</a></strong> - 3 minutes</li>
     <li><strong><a href="https://vimeo.com/1236313" target="_blank">Boulot et squash</a></strong> - 27 minutes</li>
     <li><strong><a href="https://www.arte.tv/fr/videos/095151-000-A/no-i-don-t-want-to-dance/" target="_blank">No, I Don't Want to Dance</a></strong> - 3 minutes</li>
@@ -42,7 +42,7 @@
     <li><strong>Kung Fury</strong> - 31 minutes</li>
     <li><strong><a href="https://www.arte.tv/fr/videos/071396-001-A/flash-info/" target="_blank">Flash Info</a></strong> - 2 minutes</li>
     
-  </ul>
+  </ul></div>
   
   <p><a href="https://ofnik.github.io/FOV2020/Programme2407b.html" color="#000000">___</a></p>
 </body>
