--- a/FOV2020/Programme2407.html
+++ b/FOV2020/Programme2407.html
@@ -12,9 +12,11 @@
     
     .flotte {
       float:left;
-    }    
+    }  
+    div {
+      padding-left: 50px;
+    }
     ul > li {
-      padding-right: 50px;
       line-height: 2;
       
     }
