--- a/FOV2020/Programme2407.html
+++ b/FOV2020/Programme2407.html
@@ -28,7 +28,9 @@
 <body>
   <div class="flotte"><img src="FCFOV2020.png" width="500 px"></div>
   <div>Programme du 24 juillet 2020</div>
-  <div><ul>
+  <div>
+    <strong><a href="https://www.youtube.com/watch?v=uf0nKp2P8pM" target="_blank">Le Casting</a></strong> - 3 minutes
+    <ul>
     <li><strong><a href="https://www.youtube.com/watch?v=uf0nKp2P8pM" target="_blank">Le Casting</a></strong> - 3 minutes</li>
     <li><strong><a href="https://vimeo.com/1236313" target="_blank">Boulot et squash</a></strong> - 27 minutes</li>
     <li><strong><a href="https://www.arte.tv/fr/videos/095151-000-A/no-i-don-t-want-to-dance/" target="_blank">No, I Don't Want to Dance</a></strong> - 3 minutes</li>
