--- a/FOV2020/Programme2407.html
+++ b/FOV2020/Programme2407.html
@@ -13,6 +13,9 @@
       float:left;
       margin-right: 50px;
     }  
+    div {
+     margin-top: 5px; 
+    }
     ul > li {
       line-height: 2;      
     }
