--- a/FOV2020/Programme2407.html
+++ b/FOV2020/Programme2407.html
@@ -22,7 +22,7 @@
       line-height: 2;      
     }
     a { text-decoration:none;
-        color: #00008B;
+        color: #4800FF;
     }
   </style>
 </head>
