--- a/FOV2020/Programme2407b.html
+++ b/FOV2020/Programme2407b.html
@@ -8,17 +8,26 @@
   <style>
     html {
       font-family: Verdana;
-    }    
+    }      
+    .flotte {
+      float:left;
+      margin-right: 50px;
+    }  
+    
+    div {
+     padding-left: 60px;
+     padding-top: 20px; 
+    }
     ul > li {
-      line-height: 2;
+      line-height: 2;      
     }
     a { text-decoration:none;
-        color: #00008B;
+        color: #4800FF;
     }
   </style>
 </head>
 <body>
- <img src="FCFOV2020.png" width="300 px">
+ <div class="flotte"><img src="FCFOV2020.png" width="500 px"></div>
   <p>Programme du 24 juillet 2020 (suite)</p>
   <ul>
     <li><strong><a href="https://www.youtube.com/watch?v=KUTtKnI90H0" target="_blank">Le Bureau des rêves</a></strong> - 4 minutes</li>
