--- a/FOV2020/Programme2407b.html
+++ b/FOV2020/Programme2407b.html
@@ -27,7 +27,8 @@
 </head>
 <body>
  <div class="flotte"><img src="FCFOV2020.png" width="500 px"></div>
-  <p>Programme du 24 juillet 2020 (suite)</p>
+  <div>Programme du 24 juillet 2020 (suite)</div>
+  <div>
   <ul>
     <li><strong><a href="https://www.youtube.com/watch?v=KUTtKnI90H0" target="_blank">Le Bureau des rêves</a></strong> - 4 minutes</li>
     <li><strong><a href="https://www.france.tv/spectacles-et-culture/cinema-et-courts-metrages/1523525-les-extraordinaires-aventures-de-la-jeune-fille-de-pierre.html" target="_blank">Les Extraordinaires Mésaventures de la jeune fille de pierre</a></strong> - 18 minutes</li>
@@ -36,6 +37,6 @@
     <li><strong><a href="https://www.arte.tv/fr/videos/089936-000-A/normal/" target="_blank">Normal</a></strong> - 11 minutes</li>
     
   </ul>
-
+  </div>
 </body>
 </html>
