--- a/FOV2020/Programme2407.html
+++ b/FOV2020/Programme2407.html
@@ -42,7 +42,6 @@
     <li><strong><a href="https://www.arte.tv/fr/videos/071396-001-A/flash-info/" target="_blank">Flash Info</a></strong> - 2 minutes</li>
     
   </ul></div>
-  <p></p>
-  <p><a href="https://ofnik.github.io/FOV2020/Programme2407b.html" color="#000000">___</a></p>
+  <div><a href="https://ofnik.github.io/FOV2020/Programme2407b.html" color="#000000">___</a></div>
 </body>
 </html>
