Tentative de mise en responsive

--- a/FOV2020/Programme2407.html
+++ b/FOV2020/Programme2407.html
@@ -8,9 +8,14 @@
       font-family: Verdana;
     }      
     .flotte {
-      float:left;
+      /* float:left; */
       margin-right: 50px;
-    }      
+    }  
+    @media (max-width: 800px) {
+        .flotte {
+            float: left;
+        }
+    }    
     div {
      padding-left: 60px;
      padding-top: 20px; 
