--- a/FOV2020/Programme2407.html
+++ b/FOV2020/Programme2407.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>Programme</title>
+  <title>Programme du 24 juillet 2020</title>
   <style>
     html {
       font-family: Verdana;
