--- a/FOV2020/Programme2407.html
+++ b/FOV2020/Programme2407.html
@@ -11,7 +11,7 @@
       /* float:left; */
       margin-right: 50px;
     }  
-    @media (max-width: 600px) {
+    @media (min-width: 600px) {
         .flotte {
             float: left;
         }
