--- a/FOV2020/Programme2407.html
+++ b/FOV2020/Programme2407.html
@@ -10,8 +10,9 @@
     .flotte {
       /* float:left; */
       margin-right: 50px;
+      margin-bottom: 50px;
     }  
-    @media (min-width: 800px) {
+    @media (min-width: 1200px) {
         .flotte {
             float: left;
         }
