--- a/FOV2020/Programme2407.html
+++ b/FOV2020/Programme2407.html
@@ -3,31 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Programme du 24 juillet 2020</title>
-  <style>
-    html {
-      font-family: Verdana;
-    }      
-    .flotte {
-      /* float:left; */
-      margin-right: 50px;
-      margin-bottom: 20px;
-    }  
-    @media (min-width: 1000px) {
-        .flotte {
-            float: left;
-        }
-    }    
-    div {
-     padding-left: 60px;
-     padding-top: 20px; 
-    }
-    ul > li {
-      line-height: 2;      
-    }
-    a { text-decoration:none;
-        color: #4800FF;
-    }    
-  </style>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <div class="flotte"><img src="FCFOV2020.png" width="500 px"></div>
