--- a/FOV2020/Programme2407b.html
+++ b/FOV2020/Programme2407b.html
@@ -17,6 +17,6 @@
     <li><strong><a href="https://www.arte.tv/fr/videos/089936-000-A/normal/" target="_blank">Normal</a></strong> - 11&nbsp;minutes</li>
   </ul>
   </div>  
-  <div font-size="8px">V1227</div>
+  <div font-size="8px">V1227b</div>
 </body>
 </html>
