--- a/FOV2020/Programme2407b.html
+++ b/FOV2020/Programme2407b.html
@@ -8,7 +8,7 @@
 <body>
  <div class="flotte"><img src="FCFOV2020.png" width="500 px"></div>
   <div>Programme du 24 juillet 2020 (suite)</div>
-  <div font-size="16px">
+  <div>
   <ul>
     <li><strong><a href="https://www.youtube.com/watch?v=KUTtKnI90H0" target="_blank">Le Bureau des rêves</a></strong> - 4&nbsp;minutes</li>
     <li><strong><a href="https://www.france.tv/spectacles-et-culture/cinema-et-courts-metrages/1523525-les-extraordinaires-aventures-de-la-jeune-fille-de-pierre.html" target="_blank">Les Extraordinaires Mésaventures de la jeune fille de pierre</a></strong> - 18&nbsp;minutes</li>
