--- a/FOV2020/Programme2407b.html
+++ b/FOV2020/Programme2407b.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>Programme annexe du 24 juillet 2020</title>
+  <title>Programme annexe du 24 juillet 2020 -</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
