--- a/FOV2020/Programme2407.html
+++ b/FOV2020/Programme2407.html
@@ -23,6 +23,6 @@
       <li><strong><a href="https://www.youtube.com/watch?v=iSkbd6hRkXo" target="_blank">Numb</a></strong> - 3&nbsp;minutes</li>
       <li><strong><a href="https://www.arte.tv/fr/videos/071396-001-A/flash-info/" target="_blank">Flash Info</a></strong> - 2&nbsp;minutes</li>    
     </ul></div>
-  <div><a href="https://ofnik.github.io/FOV2020/Programme2407b.html" color="#000000">___</a></div>  
+  <div><a href="https://ofnik.github.io/FOV2020/Programme2407b.html" style="color:#000000">___</a></div>  
 </body>
 </html>
