--- a/graph/test1.html
+++ b/graph/test1.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <style>
-    .bar1 { fill: aqua; }
+    .bar1 { fill: #dd8787; }
     .bar2 { fill: deepskyblue; }
     .bar3 { fill: steelblue; }
     .bar:hover {fill: orange; }
