--- a/graph/test1.html
+++ b/graph/test1.html
@@ -92,6 +92,7 @@
     .attr("height", function(d) { return height - yScale(d[2]); })
     .attr("class", function(d) {
       var s = "bar ";
+      return s;
     });
 
   // labels on the bar chart
