--- a/graph/test2.html
+++ b/graph/test2.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 </head>
 <body>
-    <p>Test version 1.2</p>
+    <p>Test version 1.3</p>
     
     <canvas id="chart" class="chartjs" width="500" height="200" style="display: block; height: 250px; width: 550px;"></canvas>
 
@@ -47,7 +47,7 @@
         const response = await fetch('https://www.data.gouv.fr/fr/datasets/r/efe23314-67c4-45d3-89a2-3faef82fae90');
         const data = await response.text();
         
-        const table = data.split('\n').slice(1);
+        const table = data.strip('\n').split('\n').slice(1);
         table.forEach(row => {
             const columns = row.split(',');
             const date = columns[1];
