--- a/graph/test2.html
+++ b/graph/test2.html
@@ -8,9 +8,9 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 </head>
 <body>
-    <p>Test version 1.8</p>
+    <p>Test version 1.9</p>
     
-    <canvas id="chart" class="chartjs" width="100%" height="500"</canvas>
+    <canvas id="chart" class="chartjs" width="100%" height="500" style="display: block; height: 500px; width: 900px;"</canvas>
 
     <!-- <canvas id="chart" class="chartjs" width="100%" height="500" style="display: block; height: 450px; width: 750px;"></canvas> -->
     
