--- a/Formulaire/enforme.html
+++ b/Formulaire/enforme.html
@@ -47,7 +47,7 @@
     </div>
    
     <div id="output"></div>
-    <button id="copieur" style="margin: 10px 0 10px 0;">Copy text</button>
+    <button id="copieur" style="margin: 10px 0 10px 0;">Copier le texte</button>
 </body>
   
 </html>
