--- a/Formulaire/enforme.html
+++ b/Formulaire/enforme.html
@@ -36,7 +36,7 @@
       
     <style>
         #GFG {
-            width: 300px;
+            width: 500px;
             padding: 0 0 50px 0;
             height: 50px;
         }
@@ -47,7 +47,7 @@
     <div id="GFG">
         <form action="#">
             Texte à mettre en forme : <input type="text" 
-                style="margin: 10px 0 10px 0;" name="Name">
+                onfocus="this.value=''" style="margin: 10px 0 10px 0;" name="Name">
             <br>
         </form>
    
