--- a/Formulaire/enforme.html
+++ b/Formulaire/enforme.html
@@ -52,7 +52,7 @@
 <body>
     <div id="GFG">
         <form action="#">
-            Texte à mettre en forme : <input type="text" 
+            1 - Texte à mettre en forme : <input type="text" 
                 onfocus="this.value=''" style="margin: 10px 0 10px 0;" name="Name">
             <br>
         </form>
