--- a/Formulaire/enforme.html
+++ b/Formulaire/enforme.html
@@ -34,7 +34,7 @@
         
         $(document).ready(function() {
             $("#effaceur").click(function() {
-                $("#output").value = "";
+                $("#output").value = "Pouet";
             });
         });
         
@@ -52,7 +52,7 @@
 <body>
     <div id="GFG">
         <form action="#">
-            2 - Texte à mettre en forme : <input type="text" 
+            3 - Texte à mettre en forme : <input type="text" 
                 onfocus="this.value=''" style="margin: 10px 0 10px 0;" name="Name">
             <br>
         </form>
