--- a/Calendrier/index.html
+++ b/Calendrier/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <title>Calendrier de l'avent 2022</title>
+    <title>Calendrier de l'Avent 2022</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
@@ -11,13 +11,13 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
 </head>
 <body>
-<div class="jumbotron text-center" style="margin-bottom:0; background-color: darkred; color: white;">
-    <h1>Calendrier de l'avent 2022</h1>
-    <p>Hoo Hoo Hoooooo ! Voici quelques indices pour ton calendrier de l'avent :p</p>
+<div class="jumbotron text-center" style="margin-bottom:0; background-color: #000033; color: white;">
+    <h1>Calendrier de l'Avent 2022</h1>
+    <p>Une case par jour et on ne triche pas ! D'ailleurs on ne peut pas ;-)</p>
 </div>
 <div class="container-fluid" style="margin-top:30px" id="app">
     <div class="row">
-        <div class="col-lg-2 col-md-3 col-sm-6 col-xs-12" v-for="message in messages">
+        <div class="w-140" v-for="message in messages">
             <a href="" data-toggle="modal" data-target="#m" @click="setModal(message)"> <img v-bind:src="message.image" class="img-fluid mx-auto d-block"> </a>
         </div>
     </div>
@@ -27,7 +27,7 @@
             <div class="modal-content">
                 
                 <div class="modal-header">
-                    <h4 class="modal-title">Indice du jour <3</h4>
+                    <h4 class="modal-title">Case du jour</h4>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
 
