--- a/Calendrier/index.html
+++ b/Calendrier/index.html
@@ -54,25 +54,15 @@
 <div id="myModal" class="modal">
     <div class="modal-content">
         <span class="close">&times;</span>
-        <h2 id="myModalTitle">Titre</h2>
+        <h3 id="myModalTitle">Titre</h3>
         <div id="myModalText">La réponse est 42.</div>
     </div>
 </div>
 
 
-
-<!-- <div class="container-fluid" style="margin-top:30px" id="app">
-    <div class="row">
-        <div class="col-xs-12" v-for="message in messages">
-            <a href="" data-toggle="modal" data-target="#m" @click="setModal(message)"> <img v-bind:src="message.image" class="img-fluid mx-auto d-block"> </a>
-        </div>
-    </div> -->
-
- 
-
 <script>
 
-   
+    // Quelque soit l'image cliquée, on ouvre un modal     
     document.querySelectorAll('img').forEach(function(img) { 
         img.addEventListener('click', function() {
             modal.style.display = "block";
@@ -132,7 +122,7 @@
         let calDate = new Date('2022-11-05');
         if (calDate <= today) {
             myModalTitle.innerText = '5 décembre';
-            myModalText.innerText = 'message case 2';
+            myModalText.innerText = 'message case';
         } else {
             myModalTitle.innerText = 'Saperlipopette !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -144,7 +134,7 @@
         let calDate = new Date('2022-11-06');
         if (calDate <= today) {
             myModalTitle.innerText = '6 décembre';
-            myModalText.innerText = 'message case 2';
+            myModalText.innerText = 'message case';
         } else {
             myModalTitle.innerText = 'Saperlipopette !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -156,7 +146,7 @@
         let calDate = new Date('2022-11-07');
         if (calDate <= today) {
             myModalTitle.innerText = '7 décembre';
-            myModalText.innerText = 'message case 2';
+            myModalText.innerText = 'message case';
         } else {
             myModalTitle.innerText = 'Saperlipopette !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -168,7 +158,7 @@
         let calDate = new Date('2022-11-08');
         if (calDate <= today) {
             myModalTitle.innerText = '8 décembre';
-            myModalText.innerText = 'message case 2';
+            myModalText.innerText = 'message case';
         } else {
             myModalTitle.innerText = 'Saperlipopette !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -180,7 +170,7 @@
         let calDate = new Date('2022-11-09');
         if (calDate <= today) {
             myModalTitle.innerText = '9 décembre';
-            myModalText.innerText = 'message case 2';
+            myModalText.innerText = 'message case';
         } else {
             myModalTitle.innerText = 'Saperlipopette !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -192,7 +182,7 @@
         let calDate = new Date('2022-11-10');
         if (calDate <= today) {
             myModalTitle.innerText = '10 décembre';
-            myModalText.innerText = 'message case 2';
+            myModalText.innerText = 'message case';
         } else {
             myModalTitle.innerText = 'Saperlipopette !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -204,7 +194,7 @@
         let calDate = new Date('2022-11-11');
         if (calDate <= today) {
             myModalTitle.innerText = '11 décembre';
-            myModalText.innerText = 'message case 2';
+            myModalText.innerText = 'message case';
         } else {
             myModalTitle.innerText = 'Saperlipopette !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -216,7 +206,7 @@
         let calDate = new Date('2022-11-12');
         if (calDate <= today) {
             myModalTitle.innerText = '12 décembre';
-            myModalText.innerText = 'message case 2';
+            myModalText.innerText = 'message case';
         } else {
             myModalTitle.innerText = 'Saperlipopette !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -228,7 +218,7 @@
         let calDate = new Date('2022-11-13');
         if (calDate <= today) {
             myModalTitle.innerText = '13 décembre';
-            myModalText.innerText = 'message case 2';
+            myModalText.innerText = 'message case';
         } else {
             myModalTitle.innerText = 'Saperlipopette !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -240,7 +230,7 @@
         let calDate = new Date('2022-11-14');
         if (calDate <= today) {
             myModalTitle.innerText = '14 décembre';
-            myModalText.innerText = 'message case 2';
+            myModalText.innerText = 'message case';
         } else {
             myModalTitle.innerText = 'Saperlipopette !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -252,7 +242,7 @@
         let calDate = new Date('2022-11-15');
         if (calDate <= today) {
             myModalTitle.innerText = '15 décembre';
-            myModalText.innerText = 'message case 2';
+            myModalText.innerText = 'message case';
         } else {
             myModalTitle.innerText = 'Saperlipopette !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -264,7 +254,7 @@
         let calDate = new Date('2022-11-16');
         if (calDate <= today) {
             myModalTitle.innerText = '16 décembre';
-            myModalText.innerText = 'message case 2';
+            myModalText.innerText = 'message case';
         } else {
             myModalTitle.innerText = 'Saperlipopette !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -276,7 +266,7 @@
         let calDate = new Date('2022-11-17');
         if (calDate <= today) {
             myModalTitle.innerText = '17 décembre';
-            myModalText.innerText = 'message case 2';
+            myModalText.innerText = 'message case';
         } else {
             myModalTitle.innerText = 'Saperlipopette !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -288,7 +278,7 @@
         let calDate = new Date('2022-11-18');
         if (calDate <= today) {
             myModalTitle.innerText = '18 décembre';
-            myModalText.innerText = 'message case 2';
+            myModalText.innerText = 'message case';
         } else {
             myModalTitle.innerText = 'Saperlipopette !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -300,7 +290,7 @@
         let calDate = new Date('2022-11-19');
         if (calDate <= today) {
             myModalTitle.innerText = '19 décembre';
-            myModalText.innerText = 'message case 2';
+            myModalText.innerText = 'message case';
         } else {
             myModalTitle.innerText = 'Saperlipopette !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -312,7 +302,7 @@
         let calDate = new Date('2022-11-20');
         if (calDate <= today) {
             myModalTitle.innerText = '20 décembre';
-            myModalText.innerText = 'message case 2';
+            myModalText.innerText = 'message case';
         } else {
             myModalTitle.innerText = 'Saperlipopette !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -324,7 +314,7 @@
         let calDate = new Date('2022-11-21');
         if (calDate <= today) {
             myModalTitle.innerText = '21 décembre';
-            myModalText.innerText = 'message case 2';
+            myModalText.innerText = 'message case';
         } else {
             myModalTitle.innerText = 'Saperlipopette !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -336,7 +326,7 @@
         let calDate = new Date('2022-11-22');
         if (calDate <= today) {
             myModalTitle.innerText = '22 décembre';
-            myModalText.innerText = 'message case 2';
+            myModalText.innerText = 'message case';
         } else {
             myModalTitle.innerText = 'Saperlipopette !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -348,7 +338,7 @@
         let calDate = new Date('2022-11-23');
         if (calDate <= today) {
             myModalTitle.innerText = '23 décembre';
-            myModalText.innerText = 'message case 2';
+            myModalText.innerText = 'message case';
         } else {
             myModalTitle.innerText = 'Saperlipopette !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -360,7 +350,7 @@
         let calDate = new Date('2022-11-24');
         if (calDate <= today) {
             myModalTitle.innerText = '24 décembre';
-            myModalText.innerText = 'message case 2';
+            myModalText.innerText = 'message case';
         } else {
             myModalTitle.innerText = 'Saperlipopette !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -369,6 +359,7 @@
 
     // Get the modal
     let modal = document.getElementById("myModal");
+    
     // Get the <span> element that closes the modal
     let span = document.getElementsByClassName("close")[0];
     
@@ -383,8 +374,6 @@
         }
     }
 
-
 </script>
 </body>
 </html>
-
