--- a/CalendrierBM/index.html
+++ b/CalendrierBM/index.html
@@ -15,7 +15,7 @@
 <body>
 <div class="jumbotron text-center" style="margin-bottom:0; background-color: #000033; color: white;">
     <h1>Calendrier de l'Avent 2022</h1>
-    <p>Une case par jour et on ne triche pas ! D'ailleurs on ne peut pas ;-)</p>
+    <p>Une case par jour et on ne triche pas !</p>
 </div>
 <div class="galerie">
 
