--- a/CalendrierBM/index.html
+++ b/CalendrierBM/index.html
@@ -15,7 +15,7 @@
 <body>
 <div class="jumbotron text-center" style="margin-bottom:0; background-color: #000033; color: white;">
     <h1>Calendrier de l'Avent 2022</h1>
-    <p>Une case par jour et on ne triche pas !</p>
+    <p>Une case par jour et on ne triche pas ! D'ailleurs on ne peut pas ;-)</p>
 </div>
 <div class="galerie">
 
@@ -74,7 +74,7 @@
         let calDate = new Date('2022-11-01');
         if (calDate <= today) {
             myModalTitle.innerText = '1er décembre';
-            myModalText.innerHTML = 'Aujourd’hui, un <a target=_blank" href="https://www.youtube.com/watch?v=lIyLRnB-eCY">joli court-métrage d’animation</a>';
+            myModalText.innerHTML = 'Aujourd’hui, une <a target=_blank" href="https://app.brief.me/article/2022-10-06-14503-une-maison-gribouillee-du-sol-au-plafond?search=true">vidéo qu’on a beaucoup aimée.</a>';
         } else {
             myModalTitle.innerText = 'Saperlipopette !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -86,7 +86,7 @@
         let calDate = new Date('2022-11-02');
         if (calDate <= today) {
             myModalTitle.innerText = '2 décembre';
-            myModalText.innerHTML = 'message case 2';
+            myModalText.innerHTML = 'Aujourd’hui, un message vraiment long pour voir ce que ça donne quand on met un message vraiment long dans cette petite fenêtre de texte parce qu’après tout c’est bien de savoir quelles sont les possiblités qui s’offrent à nous.';
         } else {
             myModalTitle.innerText = 'Saperlipopette !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -98,7 +98,7 @@
         let calDate = new Date('2022-11-03');
         if (calDate <= today) {
             myModalTitle.innerText = '3 décembre';
-            myModalText.innerHTML = 'message case';
+            myModalText.innerHTML = 'Aujourd’hui, un message vraiment long pour voir ce que ça donne quand on met un message vraiment long dans cette petite fenêtre de texte parce qu’après tout c’est bien de savoir quelles sont les possiblités qui s’offrent à nous. Aujourd’hui, un message vraiment long pour voir ce que ça donne quand on met un message vraiment long dans cette petite fenêtre de texte parce qu’après tout c’est bien de savoir quelles sont les possiblités qui s’offrent à nous.';
         } else {
             myModalTitle.innerText = 'Saperlipopette !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -377,4 +377,3 @@
 </script>
 </body>
 </html>
-
