--- a/CalendrierBM/index.html
+++ b/CalendrierBM/index.html
@@ -86,7 +86,7 @@
         let calDate = new Date('2022-11-02');
         if (calDate <= today) {
             myModalTitle.innerText = '2 décembre';
-            myModalText.innerHTML = 'Aujourd’hui, un message vraiment long pour voir ce que ça donne quand on met un message vraiment long dans cette petite fenêtre de texte parce qu’après tout c’est bien de savoir quelles sont les possiblités qui s’offrent à nous.';
+            myModalText.innerHTML = 'Aujourd’hui, un message vraiment long pour voir ce que ça donne quand on met un message vraiment long dans cette petite fenêtre de texte parce qu’après tout c’est bien de savoir quelles sont les possibilités qui s’offrent à nous. Et là je rajoute juste du texte pour aller à 300 signes. Nous y voilà.';
         } else {
             myModalTitle.innerText = 'Saperlipopette !';
             myModalText.innerText = 'C\'est absolument interdit !';
